# stocks-tool

./: .env.example  .gitignore  AGENTS.md  CODEX.md  README.md  alembic.ini  compose.yaml  pyproject.toml
.playwright-cli/: page-2026-05-20T12-30-24-979Z.yml
alembic/: env.py  script.py.mako
docs/: api-route-inventory.md  architecture.md  database.md  opening-readiness-2026-05-29.md  operator-platform-v4-runbook.md  operator-platform-v8-release-checklist.md  project-optimization-design.md  regression-matrix.md  runtime-operations.md  session-summary.md  strategy-lifecycle.md  vibe-trading-inspired-roadmap.md  worktree-release-slices.md
scripts/: import_market_events.py  mock_dashboard_fixtures.py  mock_dashboard_server.py  mock_ui_browser_flow.js  real_local_dashboard_refresh_flow.js  real_local_preopen_board_flow.js  regression_common.py  run_60h_completion_audit.py  run_audit_export_regression.py  run_bull_put_readiness_check.py  run_bull_put_real_paper_smoke.py  run_bull_put_recovery_drill.py  run_bull_put_strategy_regression.py  run_consistency_report.py  run_data_hygiene_audit.py  run_mock_ui_order_regression.py  run_operator_platform_v8_gate.py  run_paper_session_gate.py  run_real_local_dashboard_refresh_regression.py  run_real_local_preopen_board_regression.py  run_real_paper_order_smoke.py  run_regression.py  run_scheduler_on_long_gate.py  run_strategy_advisor_intake.py  run_unattended_paper.py  run_worktree_release_inventory.py  run_zero_dte_lottery_drill.py
tests/: conftest.py  test_account_snapshots_api.py  test_broker_profiles_api.py  test_health.py  (+36 more)
(+104 files in other folders)
